--- a/fetch-and-prepare-income-data.ipynb
+++ b/fetch-and-prepare-income-data.ipynb
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = 'c8af7f5b3ae7035ef315db658cd36f5e83de61c7'"
+    "api_key = 'get_your_own_key'"
    ]
   },
   {
